# Projet-Inf552

./: .gitignore  3dcloud_verticalObjects.ply  CMakeLists.txt  Doxyfile  README.md  example.ply  homographie.cpp  image.h  line3d.cpp  line3d.hpp  line3dCloud.cpp  line3dCloud.hpp  plan.cpp  plan.hpp  plane.cpp  plane.hpp  point3d.cpp  point3d.hpp  point3dCloud.cpp  point3dCloud.hpp  product.cpp  product.hpp  projectData.cpp  projectData.hpp  projet.cpp  ransac.cpp  ransac.hpp
Files/triplet/: aachen_000029_000019_vehicle.json
doc/: Doxyfile  documentation.chm
doc/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  class_plan-members.html  class_plan.html  class_ransac-members.html  class_ransac.html  classes.html  classk_means-members.html  classk_means.html  classline3d-members.html  classline3d.html  classline3d_cloud-members.html  classline3d_cloud.html  classlogger-members.html  classlogger.html  classmessage-members.html  classmessage.html  classplane-members.html  classplane.html  classpoint3d-members.html  classpoint3d.html  classpoint3d_cloud-members.html  classpoint3d_cloud.html  classproduct-members.html  classproduct.html  classproject_data-members.html  classproject_data.html  classransac-members.html  classransac.html  color_8hpp.html  color_8hpp_source.html  dir_108e36830bfc99ba8c0670ce3e37cc94.html  dir_167790342fb55959539d550b874be046.html  dir_2d63037d3c90bbd3001cbce1db844cde.html  dir_4cfdab58f539b0983ca63aa6c83cff1e.html  dir_749558d503dc94f7de714407d9fafa09.html  dir_781470135aa773d73f225b9d7994927c.html  dir_79a32c7230e840ed6023ae8d87b93b3a.html  dir_bf45b61b715fd2dfdee9a536202ef142.html  (+61 more)
doc/latex/: annotated.tex  class_plan.tex  class_ransac.tex  classline3d.tex  classline3d_cloud.tex  classplane.tex  classpoint3d.tex  classpoint3d_cloud.tex  classproduct.tex  classproject_data.tex  classransac.tex  dir_108e36830bfc99ba8c0670ce3e37cc94.tex  dir_167790342fb55959539d550b874be046.tex  dir_2d63037d3c90bbd3001cbce1db844cde.tex  dir_4cfdab58f539b0983ca63aa6c83cff1e.tex  dir_749558d503dc94f7de714407d9fafa09.tex  dir_781470135aa773d73f225b9d7994927c.tex  dir_79a32c7230e840ed6023ae8d87b93b3a.tex  dir_bf45b61b715fd2dfdee9a536202ef142.tex  files.tex  (+31 more)
include/: image.h
project/: main.cpp  performance_evaluation.cpp
(+98 files in other folders)
